--- a/nftdao/package.json
+++ b/nftdao/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.5",
     "@rainbow-me/rainbowkit": "^0.8.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.7.2",
+    "json-rpc-engine": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.7.0",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "wagmi": "^0.9.6",
     "web-vitals": "^2.1.4"
