--- a/nftdao/package.json
+++ b/nftdao/package.json
@@ -10,13 +10,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "drei": "^2.2.21",
     "ethers": "^5.7.2",
     "json-rpc-engine": "^6.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.7.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "styled-components": "^5.3.6",
     "wagmi": "^0.9.6",
     "web-vitals": "^2.1.4"
   },
@@ -43,8 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.2.4"
   }
 }
