--- a/nftdao/package.json
+++ b/nftdao/package.json
@@ -7,12 +7,15 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.5",
     "@rainbow-me/rainbowkit": "^0.8.1",
+    "@react-three/drei": "^9.56.1",
+    "@react-three/fiber": "^8.10.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "drei": "^2.2.21",
     "ethers": "^5.7.2",
+    "gsap": "^3.11.4",
     "json-rpc-engine": "^6.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -22,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
     "styled-components": "^5.3.6",
+    "three": "^0.148.0",
     "wagmi": "^0.9.6",
     "web-vitals": "^2.1.4"
   },
