--- a/nftdao/package.json
+++ b/nftdao/package.json
@@ -27,7 +27,8 @@
     "styled-components": "^5.3.6",
     "three": "^0.148.0",
     "wagmi": "^0.9.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
