--- a/nftdao/package.json
+++ b/nftdao/package.json
@@ -12,12 +12,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.6",
     "bootstrap": "^5.2.3",
     "drei": "^2.2.21",
     "ethers": "^5.7.2",
+    "express": "^4.18.2",
     "gsap": "^3.11.4",
+    "hbs": "^4.2.0",
     "json-rpc-engine": "^6.1.0",
+    "mongoose": "^6.9.0",
+    "moralis": "^2.12.0",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
+    "react-auth": "^1.0.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.7.0",
