--- a/nftdao/package.json
+++ b/nftdao/package.json
@@ -29,7 +29,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.7.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-three-fiber": "^6.0.13",
     "styled-components": "^5.3.6",
     "three": "^0.148.0",
